@@ -1,0 +1,22 @@
+<?xml version="1.0"?>
+<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<fontconfig>
+	<alias>
+		<family>serif</family>
+		<accept>
+			<family>Arundina Serif</family>
+		</accept>
+	</alias>
+	<alias>
+		<family>sans-serif</family>
+		<accept>
+			<family>Arundina Sans</family>
+		</accept>
+	</alias>
+	<alias>
+		<family>monospace</family>
+		<accept>
+			<family>Arundina Sans Mono</family>
+		</accept>
+	</alias>
+</fontconfig>
