@@ -1,0 +1,10 @@
+CONFIG_FILES = \
+	65-sipa-arundina.conf \
+	$(NULL)
+
+EXTRA_DIST = $(CONFIG_FILES)
+
+fontconfigdir = $(sysconfdir)/fonts/conf.avail
+
+fontconfig_DATA = $(CONFIG_FILES)
+
